--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,9 @@ img {
 }
 
 .activities-section {
-    padding: 30px 30px;
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
     text-align: center;
     background-color: #C9CBA3;
     border-bottom: 2px solid #723D46 ;
@@ -57,7 +59,8 @@ img {
 
 .extra-section {
     border-bottom: 2px solid #723D46;
-    background-color: #FEFAE0;
+    background-color:#FEFAE0;
+    border-bottom: 2px solid #723D46 ;
 }
 
 .festival {
