--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,8 @@ img {
 }
 
 .activities-section {
-    padding-top: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     padding-left: 30px;
     padding-right: 30px;
     text-align: center;
@@ -42,7 +43,6 @@ img {
 }
 
 .activities{
-    padding-top: 10px;
     display: flex;
 }
 
@@ -58,7 +58,6 @@ img {
 }
 
 .extra-section {
-    border-bottom: 2px solid #723D46;
     background-color:#FEFAE0;
     border-bottom: 2px solid #723D46 ;
 }
@@ -76,16 +75,16 @@ img {
 
 #popular {
     width: 50%;
-    box-shadow: 2px 6px 10px #723D46;
+    box-shadow: 5px 5px 10px #723D46;
 }
 
 #sport {
     width: 50%;
-    box-shadow: -2px -5px 10px #723D46;
+    box-shadow: -5px -5px 10px #723D46;
 }
 
 .text-festival, .text-sports {
-    padding: 10px;
+    padding: 0 5px;
 }
 
 a {
