--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ a {
 
 .guide-section {
     margin: 60px auto;
+    max-width: 100%;
     width: 400px;
     padding-top: 20px;
     padding-left: 30px;
